# TauRPC

./: .gitignore  README.md  dprint.json
.github/workflows/: release.yml
example/src-tauri/: Cargo.toml
example/src-tauri/src/: main.rs
example/src/lib/: bindings.ts
taurpc/: Cargo.toml
taurpc/src/: export.rs  lib.rs
taurpc/taurpc-macros/: Cargo.toml
