[package]
name = "taurpc-macros"
version = "0.7.1"
edition = "2024"
description = "Macros for the taurpc crate"
documentation = "https://docs.rs/taurpc"
readme = "README.md"
homepage = "https://github.com/fltsci/TauRPC"
repository = "https://github.com/fltsci/TauRPC"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
syn = { version = "2", features = ["full"] }
